# rust-on-serverless

./: .gitignore  README.md
src/actix-gcd/: Cargo.toml
src/actix-gcd/src/: main.rs
src/actix-lambda/: template.yaml
src/actix-lambda/src/: main.rs
src/axum-lambda-server-side-rendering/: Cargo.toml  style.scss  template.yaml
src/axum-lambda-server-side-rendering/src/: auth.rs  build.rs  main.rs  services.rs
src/axum-lambda-server-side-rendering/statics/: dummy.txt
src/axum-lambda-server-side-rendering/templates/: login.rs.html  nav.rs.html  page.rs.html
src/axum-lambda-web/: Cargo.toml  README.md  create-local-table.sh  docker-compose.yml  style.scss  template.yaml
src/axum-lambda-web/src/: axum_ructe.rs  build.rs  main.rs
src/axum-lambda-web/src/application/: adapters.rs  application.rs  commands.rs  domain.rs  entities.rs  error_types.rs  events.rs  helpers.rs  messaging.rs  mod.rs  public_types.rs  queries.rs  todo_service.rs
src/axum-lambda-web/src/implementations/: implementations.rs  mod.rs
src/axum-lambda-web/templates/: page.rs.html
src/event-proxy/: Cargo.toml  template.yaml
src/http-sourced-lambda/: Cargo.toml  README.md  template.yaml
src/http-sourced-lambda/src/: lib.rs  main.rs
src/http-sourced-lambda/src/application/: mod.rs
src/http-sourced-lambda/src/domain/: domain.rs  entities.rs  error_types.rs  mod.rs
src/http-sourced-lambda/src/handlers/: apiendpoints.rs  mod.rs
src/http-sourced-lambda/src/infrastructure/: infrastructure.rs  mod.rs
src/http-sourced-lambda/src/services/: create_todo_service.rs
src/http-sourced-lambda/src/shared/: data.rs  dto.rs  mod.rs  models.rs
src/s3-sourced-lambda/: Cargo.toml  template.yaml
src/s3-sourced-lambda/src/: main.rs
src/serverless-todo/: Cargo.toml  Makefile  README.md  Rust ToDo.postman_collection.json  template.yaml
src/serverless-todo/src/: lib.rs
src/serverless-todo/src/application/: create_todo_handler.rs  get_todo_handler.rs  list_todo_handler.rs  mod.rs  update_todo_handler.rs
src/serverless-todo/src/domain/: create_todo_service.rs  entities.rs  error_types.rs  mod.rs  public_types.rs  todo_service.rs
src/serverless-todo/src/infrastructure/: infrastructure.rs
src/serverless-todo/src/services/: mod.rs
src/simple-serverless-api/: Cargo.toml  Makefile  README.md  otel-config.yaml  template.yaml
src/simple-serverless-api/src/: lib.rs
src/sqs-sourced-lambda/: Cargo.toml  template.yaml
src/sqs-sourced-lambda/src/: main.rs
src/step-functions-lambda/: Cargo.toml  orderprocessing.asl.json  template.yaml
src/step-functions-lambda/backend/: Cargo.toml  README.md  api.yaml  orderprocessing.asl.json  template.yaml
src/step-functions-lambda/backend/src/shared/: handlers.rs  shared_data.rs
src/step-functions-lambda/client/: Cargo.toml
src/step-functions-lambda/client/src/: main.rs
src/step-functions-lambda/src/: main.rs
src/step-functions-lambda/src/shared/: handlers.rs  mod.rs  shared_data.rs  state_data.rs
