[package]
name = "axum_lambda"
version = "0.1.0"
edition = "2021"

build = "src/build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
aws-smithy-client = { version = "0.54.2", features = ["test-util"] }
lambda_http = "0.7.3"
lambda_runtime = {version = "0.7.2" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.3.0", features = ["add-extension", "trace"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

axum = "0.6.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10.0"
headers = "0.3.8"
mime = "0.3"

[dev-dependencies]
aws-smithy-http = "0.54.2"
aws-types = { version = "0.54.1" }
http = "0.2.8"

[build-dependencies]
ructe = { version="0.16.1", features = ["sass", "mime03"] }
