[package]
name = "actix-gcd-lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
aws-smithy-client = { version = "0.54.2", features = ["test-util"] }
lambda_http = "0.7.3"
lambda_runtime = {version = "0.7.2" }
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

axum = "0.6.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
aws-smithy-http = "0.54.2"
aws-types = { version = "0.54.1" }
http = "0.2.8"