[package]
name = "axum_lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.0.3"
aws-sdk-dynamodb = "1.4.0"
aws-sdk-eventbridge = "1.4.0"
aws-smithy-client = { version = "0.60.0" }
lambda_http = "0.8.3"
lambda_runtime = {version = "0.8.3" }
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "env-filter"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.3.5", features = ["add-extension", "trace"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }

axum = "0.7.2"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
env_logger = "0.10.1"
headers = "0.4.0"
mime = "0.3.17"
http = "1.0.0"
time = "0.3.30"
config = "0.13.4"
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = [] }

[dev-dependencies]
aws-smithy-http = "0.60.0"
aws-types = { version = "1.0.3" }
http = "1.0.0"
http-body-util = "0.1.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3