[package]
name = "dynamo_session_store"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
aws-sdk-eventbridge = "0.24.0"

lambda_http = "0.7.3"
aws-smithy-client = { version = "0.54.2", features = ["test-util"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
headers = "0.3.8"
mime = "0.3"
jsonschema = "0.16.1"

[dev-dependencies]
aws-smithy-http = "0.54.2"
aws-types = { version = "0.54.1" }
http = "0.2.8"

[[bin]]
name = "publisher"
path = "src/bin/publisher.rs"

[[bin]]
name = "register"
path = "src/bin/register.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
