[package]
name = "order_processing"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21.1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde = "1.0.152"
serde_json = "1.0.91"
aws_lambda_events = "0.7.2"
lambda_runtime = {version = "0.7.2", optional = true }
async-trait = "0.1.51"
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
uuid = { version = "1.2.2", features = ["v4"] }
chrono = "0.4.23"
rand = "0.8.5"

[dev-dependencies]
http = "0.2.8"
mockall = "0.11.2"

[features]
default = ["lambda"]
lambda = ["lambda_runtime"]

[[bin]]
name = "validate_order_function"
path = "src/bin/lambda/validate_order_function.rs"
test = false
required-features = ["lambda"]

[[bin]]
name = "price_order_function"
path = "src/bin/lambda/price_order_function.rs"
test = false
required-features = ["lambda"]