[package]
name = "order_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21.1", features = ["full"] }
tungstenite = {version = "0.18.0", features = ["native-tls"]}
url = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3